<resources>
    <string name="app_name">AndroidProject</string>
    <string name="activity_1">Activity 1</string>
    <string name="go_to_activity2">Go to Activity2</string>
    <string name="fragment">Fragment</string>
    <string name="go_to_second_activity">Go to Second Activity</string>
    <string name="google">Google</string>
    <string name="intent_demo">Intent Demo</string>
    <string name="enter_data">Enter data</string>
    <string name="simform_solutions">Simform Solutions</string>
    <string name="dial_phone">Dial Phone</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="next">Next</string>
    <string name="pass_data">Pass Data</string>
    <string name="open_gmail">Open Gmail</string>
    <string name="intent_filter_demo">Intent Filter Demo</string>
    <string name="choose_image">Choose Image</string>
    <string name="pending_intent_demo">Pending Intent Demo</string>
    <string name="send_notification">Send Notification</string>
    <string name="send_alert">Send Alert</string>
    <string name="channel_name">Channel</string>
    <string name="channel_description">Channel Description\n</string>
    <string name="intent">Intent</string>
    <string name="send_message">Send Message</string>
    <string name="open_camera">Open Camera</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="full_name">Full Name:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="back_to_fragment_1">Back to Fragment 1</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_to_fragment_3">Go to Fragment 3</string>
    <string name="pass_data_to_fragment_1">Pass Data to fragment 1</string>
    <string name="navigation_drawer_open">Navigation open</string>
    <string name="navigation_drawer_close">Navigation close</string>
    <string name="sandra_adams">Sandra Adams</string>
    <string name="sandra_488_gmail_com">sandra_488@gmail.com</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="share">share</string>
    <string name="search">search</string>
    <string name="songName">Song</string>

    <string name="perfectSinger">Ed Sheeran</string>
    <string name="perfectTime">4.25</string>
    <string name="shapeSinger">Ed Sheeran</string>
    <string name="shapeTime">3.56</string>
    <string name="kesariyaSinger">Arijit Singh</string>
    <string name="kesariyaTime">4.49</string>
    <string name="hawayeinSinger">Arijit Singh</string>
    <string name="hawayeinTime">4.49</string>
    <string name="songs">Songs</string>

    <string name="ratings">Ratings:</string>
    <string name="no_of_episodes">No. of episodes:</string>
    <string name="released_date">Released Date:</string>
    <string name="available_on">Available on</string>

    <string name="wednesday">Wednesday</string>
    <string name="wedEpisodes">8</string>
    <string name="wedDate">23/11/2023</string>
    <string name="wedPlatform">Netflix</string>

    <string name="dead">All of Us Are Dead</string>
    <string name="deadEpi">12</string>
    <string name="deadDate">28/01/2022</string>
    <string name="deadPlat">Netflix</string>

    <string name="family">The Family Man</string>
    <string name="familyEpi">19</string>
    <string name="familyDate">04/05/2021</string>
    <string name="familyPlat">Amazon Prime</string>

    <string name="lucifer">Lucifer</string>
    <string name="luciferEpi">93</string>
    <string name="luciferDate">06/12/2021</string>
    <string name="luciferPlat">Netflix</string>

    <string name="sherlock">Sherlock</string>
    <string name="sherlockEpi">13</string>
    <string name="sherlockDate">25/10/2021</string>
    <string name="sherlockPlat">Amazon Prime</string>

    <string name="friends">Friends</string>
    <string name="friendsEpi">236</string>
    <string name="friendsDate">22/10/1994</string>
    <string name="friendsPlat">Netflix</string>
    <string name="open_google">open Google</string>
    <string name="load_static_html">Load static HTML</string>

    <string name="longText">Hadoop is a data processing tool used to process large size data over distributed commodity hardware. The trend of Big Data Hadoop market is on the boom and it’s not showing any kind of deceleration in its growth. Today, industries are capable of storing all the data generated at their business at an affordable price just because of Hadoop. Hadoop helps the industry to know their customer’s behavior, customers buying priorities i.e. what they loved the most, and click patterns,etc. Hadoop provides personalized recommendations and personalizes ad targeting features. Companies are generating thousands of petabytes of data every day so the demand for Big Data professionals is very high. Even after a few years, Hadoop will be considered as the must-learn skill for the data-scientist and Big Data Technology.Companies are investing big in it and it will become an in-demand skill in the future. Hadoop provides personalized recommendations and personalizes ad targeting features. Companies are generating thousands of petabytes of data every day so the demand for Big Data professionals is very high.</string>
    <string name="camera">Camera</string>
    <string name="new_group">New Group</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="introducing_communities">Introducing Communities</string>
    <string name="start_your_community">Start your community</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_11_45_am">11:45 am</string>
    <string name="view_contact">View Contact</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="message">Message</string>
    <string name="my_status">My status</string>
    <string name="tap_to_add_status_update">Tap to add status update</string>
    <string name="recent_updates">Recent updates</string>
    <string name="today_3_32_pm">Today, 3:32 pm</string>
    <string name="create_call_link">Create call link</string>
    <string name="link_whatsapp_call">Share a link for your WhatsApp call</string>
    <string name="recent">Recent</string>
    <string name="extraText">\t\tEasily organise your related groups and send\nannouncements. Now, your communities, like\nneighbourhoods or schools, cam have their own\nspace.
    </string>
    <string name="current_date">Today</string>
    <string name="reply">REPLY</string>
    <string name="archive">ARCHIVE</string>
    <string name="messageTitle">Justin</string>
    <string name="messageContent">Hello! wassup?</string>
</resources>