<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/camera"
        android:icon="@drawable/baseline_camera_alt_24"
        android:title="@string/camera"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/group"
        android:title="@string/new_group"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"
        />
</menu>