<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/purple"
    android:padding="@dimen/dp_20"
    android:gravity="center_vertical"
    >

    <ImageView
        android:id="@+id/nav_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile_image"
        android:layout_marginTop="@dimen/dp_20"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/sandra_adams"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sandra_488_gmail_com"
        android:textSize="15sp"
        android:textColor="@color/white" />

</LinearLayout>