<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.demo.IntentDemoActivity">

    <TextView
        android:id="@+id/intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intent_demo"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_data"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/explicitIntent"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/go_to_second_activity"
        android:background="@color/darkBlue"
        android:padding="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        app:layout_constraintStart_toStartOf="@id/textInput"
        app:layout_constraintEnd_toEndOf="@id/textInput"
        app:layout_constraintTop_toBottomOf="@id/textInput"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/implicitIntent"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:background="@color/darkBlue"
        android:padding="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintStart_toStartOf="@id/explicitIntent"
        app:layout_constraintEnd_toEndOf="@id/explicitIntent"
        app:layout_constraintTop_toBottomOf="@id/explicitIntent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/location"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/simform_solutions"
        android:background="@color/darkBlue"
        android:padding="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintStart_toStartOf="@id/implicitIntent"
        app:layout_constraintEnd_toEndOf="@id/implicitIntent"
        app:layout_constraintTop_toBottomOf="@id/implicitIntent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/phoneNumber"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/dial_phone"
        android:background="@color/darkBlue"
        android:padding="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintStart_toStartOf="@id/location"
        app:layout_constraintEnd_toEndOf="@id/location"
        app:layout_constraintTop_toBottomOf="@id/location"
        />

</androidx.constraintlayout.widget.ConstraintLayout>