<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="series"
            type="com.example.demo.searchview.models.Series" />
    </data>


    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:backgroundTint="@color/purple"
        app:cardCornerRadius="@dimen/dp_10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/images"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_150"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@{series.poster}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/wednesday" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@{series.seriesName}"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/images"
                app:layout_constraintTop_toTopOf="@id/images"
                tools:text="@string/wednesday" />

            <TextView
                android:id="@+id/ratingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/no_of_episodes"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@id/ratings"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:text="@{series.episodes}"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/ratingsTitle"
                app:layout_constraintTop_toTopOf="@id/ratingsTitle"
                tools:text="@string/wedEpisodes" />

            <TextView
                android:id="@+id/dateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/released_date"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@id/date"
                app:layout_constraintStart_toStartOf="@id/ratingsTitle"
                app:layout_constraintTop_toBottomOf="@id/ratingsTitle" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_15"
                android:text="@{series.date}"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/dateTitle"
                app:layout_constraintTop_toTopOf="@id/dateTitle"
                tools:text="@string/wedDate" />

            <TextView
                android:id="@+id/platformTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/available_on"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@id/platform"
                app:layout_constraintStart_toStartOf="@id/dateTitle"
                app:layout_constraintTop_toBottomOf="@id/dateTitle" />

            <TextView
                android:id="@+id/platform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:text="@{series.platform}"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/platformTitle"
                app:layout_constraintTop_toTopOf="@id/platformTitle"
                tools:text="@string/wedPlatform" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>
