<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.demo.whatsapp.StatusFragment">

    <ImageView
        android:id="@+id/status"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:src="@drawable/profile_image"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_status"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginStart="@dimen/dp_10"
        app:layout_constraintStart_toEndOf="@id/status"
        app:layout_constraintTop_toTopOf="@id/status"
        />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_add_status_update"
        android:textColor="@color/grayChat"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        />

    <TextView
        android:id="@+id/updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_updates"
        android:textColor="@color/grayChat"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="@id/status"
        app:layout_constraintTop_toBottomOf="@id/status"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statusRv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updates"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        />

</androidx.constraintlayout.widget.ConstraintLayout>