<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.demo.IntentFilterDemoActivity">

    <TextView
        android:id="@+id/intentFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intent_filter_demo"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/openGmail"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/open_gmail"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:padding="@dimen/dp_20"
        android:background="@color/brown"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intentFilter"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selectImage"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:padding="@dimen/dp_20"
        android:background="@color/brown"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/openGmail"
        />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectImage"
        android:contentDescription="@string/app_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>